--- a/web/rol/List.xhtml
+++ b/web/rol/List.xhtml
@@ -6,88 +6,70 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+     <ui:composition template="/template-admin.xhtml">
 
 
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListRolTitle}"></h:outputText>
-        </ui:define>
-
-        <ui:define name="body">
+        <ui:define name="contenido">
             <h:form id="RolListForm">
-                <p:panel header="#{bundle.ListRolTitle}">
+                <p:panel>
                     <p:dataTable id="datalist" value="#{rolController.items}" var="item"
                                  selectionMode="single" selection="#{rolController.selected}"
-                                 paginator="true"
+                                 paginator="true" paginatorPosition="bottom"
                                  rowKey="#{item.idROL}"
-                                 rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
-                                 >
+                                 rows="7" >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_idROL}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.idROL}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_nombre}"/>
+                                <h:outputText value="#{bundle.Rol}"/>
                             </f:facet>
                             <h:outputText value="#{item.nombre}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_permiso1}"/>
+                                <h:outputText value="#{bundle.Label_permiso1}"/>
                             </f:facet>
                             <h:outputText value="#{item.permiso1}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_permiso2}"/>
+                                <h:outputText value="#{bundle.Label_permiso2}"/>
                             </f:facet>
                             <h:outputText value="#{item.permiso2}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_permiso3}"/>
+                                <h:outputText value="#{bundle.Label_permiso3}"/>
                             </f:facet>
                             <h:outputText value="#{item.permiso3}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_permiso4}"/>
+                                <h:outputText value="#{bundle.Label_permiso4}"/>
                             </f:facet>
                             <h:outputText value="#{item.permiso4}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_permiso5}"/>
+                                <h:outputText value="#{bundle.Label_permiso5}"/>
                             </f:facet>
                             <h:outputText value="#{item.permiso5}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_permiso6}"/>
+                                <h:outputText value="#{bundle.Label_permiso6}"/>
                             </f:facet>
                             <h:outputText value="#{item.permiso6}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_permiso7}"/>
+                                <h:outputText value="#{bundle.Label_permiso7}"/>
                             </f:facet>
                             <h:outputText value="#{item.permiso7}"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListRolTitle_ESTADOidESTADO}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.ESTADOidESTADO}"/>
-                        </p:column>
-                        <f:facet name="footer">
+                        <f:facet name="header">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{rolController.prepareCreate}" update=":RolCreateForm" oncomplete="PF('RolCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":RolViewForm" oncomplete="PF('RolViewDialog').show()" disabled="#{empty rolController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":RolEditForm" oncomplete="PF('RolEditDialog').show()" disabled="#{empty rolController.selected}"/>
