--- a/web/servicioForense/List.xhtml
+++ b/web/servicioForense/List.xhtml
@@ -6,52 +6,34 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/template-admin.xhtml">
 
 
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListServicioForenseTitle}"></h:outputText>
-        </ui:define>
-
-        <ui:define name="body">
+        <ui:define name="contenido">
             <h:form id="ServicioForenseListForm">
-                <p:panel header="#{bundle.ListServicioForenseTitle}">
+                <p:panel >
                     <p:dataTable id="datalist" value="#{servicioForenseController.items}" var="item"
                                  selectionMode="single" selection="#{servicioForenseController.selected}"
-                                 paginator="true"
+                                 paginator="true" paginatorPosition="bottom"
                                  rowKey="#{item.idSERVICIOFORENSE}"
-                                 rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
-                                 >
+                                 rows="10" >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListServicioForenseTitle_idSERVICIOFORENSE}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.idSERVICIOFORENSE}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListServicioForenseTitle_nombre}"/>
+                                <h:outputText value="#{bundle.Servicio_Forense}"/>
                             </f:facet>
                             <h:outputText value="#{item.nombre}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListServicioForenseTitle_ESTADOidESTADO}"/>
+                                <h:outputText value="#{bundle.Grupo}"/>
                             </f:facet>
-                            <h:outputText value="#{item.ESTADOidESTADO}"/>
+                            <h:outputText value="#{item.GRUPOidGRUPO.nombre}"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListServicioForenseTitle_GRUPOidGRUPO}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.GRUPOidGRUPO}"/>
-                        </p:column>
-                        <f:facet name="footer">
+                        <f:facet name="header">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{servicioForenseController.prepareCreate}" update=":ServicioForenseCreateForm" oncomplete="PF('ServicioForenseCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":ServicioForenseViewForm" oncomplete="PF('ServicioForenseViewDialog').show()" disabled="#{empty servicioForenseController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":ServicioForenseEditForm" oncomplete="PF('ServicioForenseEditDialog').show()" disabled="#{empty servicioForenseController.selected}"/>
