--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -48,6 +48,8 @@
         <h:link outcome="/tipoPregunta/List" value="Show All TipoPregunta Items"/>
         <br />
         <h:link outcome="/usuario/List" value="Show All Usuario Items"/>
+        <br />
+        <h:link outcome="/Usuarios/encuesta" value="USUARIOS"/>
     </h:body>
 
 
