--- a/web/template-admin.xhtml
+++ b/web/template-admin.xhtml
@@ -45,6 +45,7 @@
                         
                         <p:submenu label="Gestion Encuestas">
                             <p:menuitem value="#{bundle.Encuestas}"  outcome="/encuesta/List"/>
+                            <p:menuitem value="#{bundle.EncuestaPreguntas}"  outcome="/encuestaPreguntas/List"/>
                             <p:menuitem value="#{bundle.Muestra_estadistica}"  outcome="/muestra/List"/>
                             <p:menuitem value="#{bundle.Respuestas}"  outcome="/respuesta/List"/>
                         </p:submenu>
