--- a/web/encuesta/List.xhtml
+++ b/web/encuesta/List.xhtml
@@ -6,58 +6,33 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/template-admin.xhtml">
 
-
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListEncuestaTitle}"></h:outputText>
-        </ui:define>
-
-        <ui:define name="body">
+        <ui:define name="contenido">
             <h:form id="EncuestaListForm">
-                <p:panel header="#{bundle.ListEncuestaTitle}">
+                <p:panel>
                     <p:dataTable id="datalist" value="#{encuestaController.items}" var="item"
                                  selectionMode="single" selection="#{encuestaController.selected}"
-                                 paginator="true"
+                                 paginator="true" paginatorPosition="bottom"
                                  rowKey="#{item.idENCUESTA}"
-                                 rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
-                                 >
+                                 rows="10" >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEncuestaTitle_idENCUESTA}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.idENCUESTA}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEncuestaTitle_nombre}"/>
+                                <h:outputText value="#{bundle.Label_nombre}"/>
                             </f:facet>
                             <h:outputText value="#{item.nombre}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEncuestaTitle_ESTADOidESTADO}"/>
+                                <h:outputText value="#{bundle.Servicio_Forense}"/>
                             </f:facet>
-                            <h:outputText value="#{item.ESTADOidESTADO}"/>
+                            <h:outputText value="#{item.SERVICIOFORENSEidSERVICIOFORENSE.nombre}"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEncuestaTitle_SERVICIOFORENSEidSERVICIOFORENSE}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.SERVICIOFORENSEidSERVICIOFORENSE}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEncuestaTitle_USUARIOcedula}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.USUARIOcedula}"/>
-                        </p:column>
-                        <f:facet name="footer">
+                        <f:facet name="header">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{encuestaController.prepareCreate}" update=":EncuestaCreateForm" oncomplete="PF('EncuestaCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":EncuestaViewForm" oncomplete="PF('EncuestaViewDialog').show()" disabled="#{empty encuestaController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":EncuestaEditForm" oncomplete="PF('EncuestaEditDialog').show()" disabled="#{empty encuestaController.selected}"/>
