--- a/web/encuestaPreguntas/List.xhtml
+++ b/web/encuestaPreguntas/List.xhtml
@@ -6,46 +6,34 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/template-admin.xhtml">
 
 
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListEncuestaPreguntasTitle}"></h:outputText>
-        </ui:define>
-
-        <ui:define name="body">
+        <ui:define name="contenido">
             <h:form id="EncuestaPreguntasListForm">
-                <p:panel header="#{bundle.ListEncuestaPreguntasTitle}">
+                <p:panel >
                     <p:dataTable id="datalist" value="#{encuestaPreguntasController.items}" var="item"
                                  selectionMode="single" selection="#{encuestaPreguntasController.selected}"
-                                 paginator="true"
+                                 paginator="true" paginatorPosition="bottom"
                                  rowKey="#{item.idENCUESTAPREGUNTAS}"
-                                 rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
-                                 >
+                                 rows="10" >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEncuestaPreguntasTitle_idENCUESTAPREGUNTAS}"/>
+                                <h:outputText value="#{bundle.Encuestas}"/>
                             </f:facet>
-                            <h:outputText value="#{item.idENCUESTAPREGUNTAS}"/>
+                            <h:outputText value="#{item.ENCUESTAidENCUESTA.nombre}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEncuestaPreguntasTitle_ENCUESTAidENCUESTA}"/>
+                                <h:outputText value="#{bundle.Preguntas}"/>
                             </f:facet>
-                            <h:outputText value="#{item.ENCUESTAidENCUESTA}"/>
+                            <h:outputText value="#{item.PREGUNTASidPREGUNTAS.pregunta}"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListEncuestaPreguntasTitle_PREGUNTASidPREGUNTAS}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.PREGUNTASidPREGUNTAS}"/>
-                        </p:column>
-                        <f:facet name="footer">
+                        <f:facet name="header">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{encuestaPreguntasController.prepareCreate}" update=":EncuestaPreguntasCreateForm" oncomplete="PF('EncuestaPreguntasCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":EncuestaPreguntasViewForm" oncomplete="PF('EncuestaPreguntasViewDialog').show()" disabled="#{empty encuestaPreguntasController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":EncuestaPreguntasEditForm" oncomplete="PF('EncuestaPreguntasEditDialog').show()" disabled="#{empty encuestaPreguntasController.selected}"/>
