CRUD completo de todas las vistas del admin + muestra estadistica

--- a/web/muestra/List.xhtml
+++ b/web/muestra/List.xhtml
@@ -6,42 +6,30 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/template-admin.xhtml">
 
 
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListMuestraTitle}"></h:outputText>
-        </ui:define>
-
-        <ui:define name="body">
+        <ui:define name="contenido">
             <h:form id="MuestraListForm">
-                <p:panel header="#{bundle.ListMuestraTitle}">
+                <p:panel>
                     <p:dataTable id="datalist" value="#{muestraController.items}" var="item"
                                  selectionMode="single" selection="#{muestraController.selected}"
-                                 paginator="true"
+                                 paginator="true" paginatorPosition="bottom"
                                  rowKey="#{item.idMUESTRA}"
-                                 rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
-                                 >
+                                 rows="10" >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMuestraTitle_idMUESTRA}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.idMUESTRA}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMuestraTitle_planeada}"/>
+                                <h:outputText value="#{bundle.Muestra_planeada}"/>
                             </f:facet>
                             <h:outputText value="#{item.planeada}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMuestraTitle_fechaMuestra}"/>
+                                <h:outputText value="#{bundle.fechaMuestra}"/>
                             </f:facet>
                             <h:outputText value="#{item.fechaMuestra}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -49,11 +37,17 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListMuestraTitle_ENCUESTAidENCUESTA}"/>
+                                <h:outputText value="#{bundle.Encuestas}"/>
                             </f:facet>
-                            <h:outputText value="#{item.ENCUESTAidENCUESTA}"/>
+                            <h:outputText value="#{item.ENCUESTAidENCUESTA.nombre}"/>
                         </p:column>
-                        <f:facet name="footer">
+                        <p:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.Servicio_Forense}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.ENCUESTAidENCUESTA.SERVICIOFORENSEidSERVICIOFORENSE.nombre}"/>
+                        </p:column>
+                        <f:facet name="header">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{muestraController.prepareCreate}" update=":MuestraCreateForm" oncomplete="PF('MuestraCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":MuestraViewForm" oncomplete="PF('MuestraViewDialog').show()" disabled="#{empty muestraController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":MuestraEditForm" oncomplete="PF('MuestraEditDialog').show()" disabled="#{empty muestraController.selected}"/>
