--- a/web/Usuarios/encuesta.xhtml
+++ b/web/Usuarios/encuesta.xhtml
@@ -23,11 +23,11 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{muestraController.selected != null}">
                         <p:outputLabel value="#{bundle.Muestra_planeada}" for="planeada" />
-                        <p:inputText id="planeada" value="#{muestraController.selected.planeada}" title="#{bundle.CreateMuestraTitle_planeada}" />
+                        <p:inputText id="planeada" value="#{muestraController.selected.planeada}" />
                         <p:outputLabel value="#{bundle.fechaMuestra}" for="fechaMuestra" />
-                        <p:calendar id="fechaMuestra" pattern="MM/dd/yyyy" value="#{muestraController.selected.fechaMuestra}" title="#{bundle.EditMuestraTitle_fechaMuestra}"  showOn="button"/>
+                        <p:calendar id="fechaMuestra" pattern="MM/dd/yyyy" value="#{muestraController.selected.fechaMuestra}" showOn="button"/>
                         <p:outputLabel value="#{bundle.Encuestas}" for="ENCUESTAidENCUESTA" />
-                        <p:selectOneMenu id="ENCUESTAidENCUESTA" value="#{muestraController.selected.ENCUESTAidENCUESTA}" required="true" requiredMessage="#{bundle.EditMuestraRequiredMessage_ENCUESTAidENCUESTA}">
+                        <p:selectOneMenu id="ENCUESTAidENCUESTA" value="#{muestraController.selected.ENCUESTAidENCUESTA}" required="true" >
                             <f:selectItems value="#{encuestaController.itemsAvailableSelectOne}"
                                            var="ENCUESTAidENCUESTAItem"
                                            itemValue="#{ENCUESTAidENCUESTAItem}"/>
@@ -46,9 +46,9 @@
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{muestraController.selected != null}" >
                         <p:outputLabel value="#{bundle.Muestra_planeada}" for="planeada" />
-                        <p:inputText id="planeada" value="#{muestraController.selected.planeada}" title="#{bundle.CreateMuestraTitle_planeada}" />
+                        <p:inputText id="planeada" value="#{muestraController.selected.planeada}"  />
                         <p:outputLabel value="#{bundle.fechaMuestra}" for="fechaMuestra" />
-                        <p:calendar id="fechaMuestra" pattern="MM/dd/yyyy" value="#{muestraController.selected.fechaMuestra}" title="#{bundle.EditMuestraTitle_fechaMuestra}"  showOn="button"/>
+                        <p:calendar id="fechaMuestra" pattern="MM/dd/yyyy" value="#{muestraController.selected.fechaMuestra}" showOn="button"/>
                         <p:outputLabel value="#{bundle.Encuestas}" for="ENCUESTAidENCUESTA"  />
                         <p:selectOneMenu id="ENCUESTAidENCUESTA" value="#{muestraController.selected.ENCUESTAidENCUESTA}" required="true" >
                             <f:selectItems value="#{encuestaController.itemsAvailableSelectOne}"
